// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FilmpalastTO falls back to first result when year does not match 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/year-fallback-test",
      "sourceLabel": "Filmpalast",
      "title": "VOE HD - Year Fallback Test (2024)",
    },
    "url": "https://voe.sx/fallback123",
  },
]
`;

exports[`FilmpalastTO handle the matrix 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/the-matrix-1999",
      "sourceLabel": "Filmpalast",
      "title": "VOE HD - The Matrix (1999)",
    },
    "url": "https://voe.sx/abc123matrix",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/the-matrix-1999",
      "sourceLabel": "Filmpalast",
      "title": "Doodstream HD - The Matrix (1999)",
    },
    "url": "https://dood.to/e/xyz456matrix",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/the-matrix-1999",
      "sourceLabel": "Filmpalast",
      "title": "Veev HD - The Matrix (1999)",
    },
    "url": "https://veev.to/e/veev789matrix",
  },
]
`;

exports[`FilmpalastTO handles embedded player with data-player-url 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/direct-stream-test-2023",
      "sourceLabel": "Filmpalast",
      "title": "Veev HD - Direct Stream Test (2023)",
    },
    "url": "https://veev.to/e/direct123",
  },
]
`;

exports[`FilmpalastTO handles multiple hosters including known streaming hosts 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/relative-url-test",
      "sourceLabel": "Filmpalast",
      "title": "VOE HD - Relative URL Test (2022)",
    },
    "url": "https://voe.sx/e/relative123",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/relative-url-test",
      "sourceLabel": "Filmpalast",
      "title": "Doodstream - Relative URL Test (2022)",
    },
    "url": "https://dood.to/e/dood456",
  },
]
`;

exports[`FilmpalastTO handles series with season and episode 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/breaking-bad-s02e03",
      "sourceLabel": "Filmpalast",
      "title": "VOE HD - Breaking Bad S02E03",
    },
    "url": "https://voe.sx/breakingbad203",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/breaking-bad-s02e03",
      "sourceLabel": "Filmpalast",
      "title": "Doodstream - Breaking Bad S02E03",
    },
    "url": "https://dood.to/e/breakingbad203",
  },
]
`;

exports[`FilmpalastTO handles series with season but no episode 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://filmpalast.to/stream/breaking-bad-s01e01",
      "sourceLabel": "Filmpalast",
      "title": "VOE HD - Breaking Bad S01Eundefined",
    },
    "url": "https://voe.sx/breakingbad101",
  },
]
`;

exports[`FilmpalastTO skips malformed href in stream block without throwing 1`] = `[]`;
